# internal/handler/product.go
@@ -3,7 +3,6 @@ package handler
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/google/uuid"
-	"log"
 )
 
 // getAllProducts godoc
@@ -20,7 +19,7 @@ func (h *httpHandler) getAllProducts() gin.HandlerFunc {
 	return func(c *gin.Context) {
 		products, err := h.productSvc.GetAllProducts(c)
 		if err != nil {
-			log.Printf("[Product Handler] %v", err)
+			h.logger.Errorf("[Product Handler] %v", err)
 			c.JSON(500, gin.H{"error": "internal server error"})
 		}
 
@@ -35,12 +34,13 @@ func (h *httpHandler) getAllProducts() gin.HandlerFunc {
 // @Tags products
 // @Accept  json
 // @Produce  json
+// @Param session-id query string true "Session UUID"
 // @Success 200
 // @Failure 500 {object} error "Internal Server Error"
-// @Router /products/get-unrated/{session-id} [get]
+// @Router /products/get-unrated [get]
 func (h *httpHandler) getUnratedProducts() gin.HandlerFunc {
 	return func(c *gin.Context) {
-		sessionId, err := uuid.Parse(c.Param("session-id"))
+		sessionId, err := uuid.Parse(c.Query("session-id"))
 		if err != nil {
 			c.JSON(400, gin.H{"error": "session-id must be a valid uuid"})
 			return
@@ -48,7 +48,7 @@ func (h *httpHandler) getUnratedProducts() gin.HandlerFunc {
 
 		products, err := h.productSvc.GetUnratedProducts(c, sessionId)
 		if err != nil {
-			log.Printf("[Product Handler] %v", err)
+			h.logger.Errorf("[Product Handler] %v", err)
 			c.JSON(500, gin.H{"error": "internal server error"})
 		}
 
